2018-01-31 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Fixed agent program get file from server /usr/share/segatexd as its own name to /tmp  
2018-01-29 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Fixed agent program properly break from the loop 
2018-01-28 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Fixed to send file from server to agent 
2018-01-27 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Added tcp server feature 
2018-01-21 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Initializing segatxd-agent function 
2017-08-05 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Added avoid_oom_killer function 
2017-08-04 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Fixed properly handle SIGINT  
2017-08-02 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Code cleaning 
2017-08-01 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Added logging functionality 
2017-07-31 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Fixed config file read functionality 
2017-07-28 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Added syslog messages 
2017-07-27 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Changed src directory to server directory 
2017-07-27 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Fixed getopt functionality in main.c 
2017-07-25 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Added SIGHUP functionality 
2017-07-23 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Added some debugging strings
2017-07-19 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Added daemonize functionality
2017-07-16 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
    Initiating.