@@ -1,3 +1,18 @@
 # This is the configuration file for the SELinux help tool 
-# segatexd daemon.
+
+## 
+## threads <number>
+##
+## segatexd daemon.
+## this is not used 
+
 threads 10
+
+## 
+## send_file <file_name>
+## 
+## Please set file name in /usr/share/segatexd
+## sample file is set here. you can remove and set any file. 
+##  
+
+send_file segatexd_tcp_send_data.txt 
