@@ -1,3 +1,6 @@
+2018-02-02 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
+    Fixed to read send_file from /etc/segatexd.conf so, any file name could be
+    sent to agent. But, file should be put to /usr/share/segatexd.
 2018-01-31 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
     Fixed agent program get file from server /usr/share/segatexd as its own name to /tmp  
 2018-01-29 Shintaro Fujiwara <shintaro.fujiwara@gmail.com>
